# pyPEAKO

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
docs/: conf.py  guide.rst  index.rst  installation.rst  overview.rst
docs/_build/doctrees/: environment.pickle  guide.doctree  index.doctree  installation.doctree  overview.doctree
docs/_build/doctrees/source/: modules.doctree  peako.doctree
docs/_build/html/: .buildinfo  genindex.html  guide.html  index.html  installation.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_static/: websupport.js
docs/_build/html/source/: modules.html  peako.html
docs/source/: modules.rst  peako.rst
examples/: marked_peaks_sample_spectra.nc
peako/: mark_peaks.py  peako.py
pypeako/: __init__.py  peako.py  utils.py
src/: marked_peaks_sample_spectra.nc  peako.py
tests/: test_peako.py  test_utils.py
